roco-new/base_template/tests/requests/snapshots/resend_verification_user@auth_request.snap
---
source: tests/requests/auth.rs
assertion_line: 414
expression: user
---
Model {
    created_at: DATE,
    updated_at: DATE,
    id: ID
    pid: PID,
    email: "test@roco.com",
    password: "PASSWORD",
    api_key: "lo-PID",
    name: "roco",
    reset_token: None,
    reset_sent_at: None,
    email_verification_token: Some(
        "PID",
    ),
    email_verification_sent_at: Some(
        DATE,
    ),
    email_verified_at: None,
    magic_link_token: None,
    magic_link_expiration: None,
}
